<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	tools:context=".MainActivity">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<TextView
			style="@style/Unit2TextStyle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="@dimen/general_width"
			android:text="@string/text_show_result"/>

		<TextView
			android:id="@+id/text_result"
			style="@style/Unit2TextStyle"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:padding="@dimen/general_width"
			tools:text="You clicked [My style Button]!"/>
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<TextView
			style="@style/Unit2TextStyle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="@dimen/general_width"
			android:text="@string/text_exit"/>

		<EditText
			android:id="@+id/edit_result"
			style="@style/MyStyleEditText"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="@dimen/general_width"
			android:singleLine="true"/>

		<Button
			android:id="@+id/button_exit"
			style="@style/CustomClickableButton"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="@dimen/general_width"
			android:text="@string/action_exit"/>
	</LinearLayout>

</LinearLayout>